--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,9 +5,9 @@
 # or to provide custom queries or build logic.
 #
 # ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
+# We have attempted to detect the  in your repository. Please check
 # the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
+# supported CodeQL languages.Cash App: This code is for you and only you to use to log in to Cash App. Code: 710-971. To prevent fraud on your account, never share it anywhere or for any reason with anyone, including people posing as Cash App.
 #
 name: "CodeQL"
 
