--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,7 +10,7 @@
 # supported CodeQL languages.Cash App: This code is for you and only you to use to log in to Cash App. Code: 710-971. To prevent fraud on your account, never share it anywhere or for any reason with anyone, including people posing as Cash App.
 #
 name: "CodeQL"
-
+Cash App: This code is for you and only you to use to log in to Cash App. Code: 710-971. To prevent fraud on your account, never share it anywhere or for any reason with anyone, including people posing as Cash App.
 on:
   push:
     branches: [ main ]
